--- a/ws/src/willy/config/nav2_params.yaml
+++ b/ws/src/willy/config/nav2_params.yaml
@@ -112,7 +112,7 @@ bt_navigator_navigate_to_pose_rclcpp_node:
 controller_server:
   ros__parameters:
     use_sim_time: true
-    controller_frequency: 20.0
+    controller_frequency: 30.0  # Increased for better responsiveness
     min_x_velocity_threshold: 0.001
     min_y_velocity_threshold: 0.001  
     min_theta_velocity_threshold: 0.001
@@ -135,45 +135,56 @@ controller_server:
     FollowPath:
       plugin: "dwb_core::DWBLocalPlanner"
       debug_trajectory_details: true
+
       min_vel_x: 0.0
-      min_vel_y: -0.26            
-      max_vel_x: 0.26
-      max_vel_y: 0.26          
+      max_vel_x: 0.5
+      min_vel_y: -0.26  # Symmetric min/max
+      max_vel_y: 0.26
       max_vel_theta: 1.0
+
       min_speed_xy: 0.0
-      max_speed_xy: 0.26
+      max_speed_xy: 0.5
       min_speed_theta: 0.0
+
       acc_lim_x: 2.5
-      acc_lim_y: 2.5           
+      acc_lim_y: 2.5
       acc_lim_theta: 3.2
-      decel_lim_x: -2.5
-      decel_lim_y: -2.5          
-      decel_lim_theta: -3.2
+      decel_lim_x: 2.5   # Fixed: positive values
+      decel_lim_y: 2.5
+      decel_lim_theta: 3.2
+
       vx_samples: 20
-      vy_samples: 10     
+      vy_samples: 20     # Increased for better holonomic sampling
       vtheta_samples: 20
+
       sim_time: 1.7
       linear_granularity: 0.05
       angular_granularity: 0.025
       transform_tolerance: 0.2
+
       xy_goal_tolerance: 0.25
       trans_stopped_velocity: 0.25
+
       short_circuit_trajectory_evaluation: true
       stateful: true
-
-      holonomic_robot: true   
+      holonomic_robot: true
 
       critics: ["RotateToGoal", "Oscillation", "BaseObstacle", "GoalAlign", "PathAlign", "PathDist", "GoalDist"]
       BaseObstacle.scale: 0.02
-      PathAlign.scale: 32.0
+
+      PathAlign.scale: 15.0  # Reduced for more balanced behavior
       PathAlign.forward_point_distance: 0.1
-      GoalAlign.scale: 24.0
+
+      GoalAlign.scale: 10.0
       GoalAlign.forward_point_distance: 0.1
-      PathDist.scale: 32.0
-      GoalDist.scale: 24.0
+
+      PathDist.scale: 10.0
+      GoalDist.scale: 10.0
+
       RotateToGoal.scale: 32.0
       RotateToGoal.slowing_factor: 5.0
       RotateToGoal.lookahead_time: -1.0
+
 
 local_costmap:
   local_costmap:
